--- a/react-sample-app/css/angular-demo.css
+++ b/react-sample-app/css/angular-demo.css
@@ -590,3 +590,10 @@ table#sourceTable tbody tr {
     background-color: #fff;
     margin: 0 auto;
 }
+
+#choicesDisplay {
+    padding: 10px;
+    background: rgb(227, 250, 227);
+    border: 1px solid rgb(171, 239, 171);
+    color: rgb(9, 56, 9);
+}
